--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,31 @@
 body {
   padding: 0;
   text-align: center;
+  font-family: "Verdana", sans-serif;
+  background-color: #f0f8ff;
 }
 
 #game-intro {
   padding: 20px 0px;
+}
+#game-intro img {
+  max-width: 500px;
+  display: block;
+  margin: 0 auto 20px;
+}
+
+#hud {
+  display: none; /* hidden at page load */
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  text-align: left;
+  background: rgba(0, 0, 0, 0.4); /* translucent background */
+  padding: 10px 15px;
+  border-radius: 8px;
 }
 
 #game-container {
@@ -39,6 +60,8 @@ body {
 
 #end-game {
   display: none;
+  flex-direction: column;
+  background: plum;
 }
 
 .game-intro p {
