--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,29 @@ body {
   background-color: #f0f8ff;
 }
 
+.btn {
+  background: rgb(129, 31, 148);
+  border-bottom: 6px inset rgba(0, 0, 0, 0.5);
+  border-left: 6px inset rgba(0, 0, 0, 0.5);
+  border-right: 6px inset rgba(255, 255, 255, 0.5);
+  border-top: 6px inset rgba(255, 255, 255, 0.5);
+  box-sizing: border-box;
+  color: white;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 2.2rem;
+  margin: 1rem;
+  min-width: 200px;
+  padding: 0.5rem;
+  text-transform: uppercase;
+  width: auto;
+
+  &:focus,
+  &:hover {
+    background: #bcbcbc;
+  }
+}
+
 /* ++++++++++++++++++++++++++++++++++++++++++++++++++this is game into page +++++++++++++++++++++++++++++++++++++++++++++++*/
 #game-intro {
   padding: 20px 0px;
@@ -52,11 +75,22 @@ body {
   padding: 0px 20px;
   overflow: hidden;
   position: relative;
-  background-image: url("../Asset/image/newback2.png");
   background-size: auto;
   background-repeat: repeat-x;
   animation: slide-left 4s linear infinite;
   background-position: 0 0;
+}
+
+.level-1 {
+  background-image: url("../Asset/image/newback2.png");
+}
+
+.level-2 {
+  background-image: url("../Asset/image/newback4.png");
+}
+
+.level-3 {
+  background-image: url("../Asset/image/newback3.png");
 }
 
 @keyframes slide-left {
@@ -69,7 +103,9 @@ body {
   }
 }
 
-#end-game {
+/* this is endgame  */
+
+#you-win {
   display: none;
   flex-direction: column;
   background: plum;
@@ -77,15 +113,23 @@ body {
   align-items: center;
 }
 
-/* this is endgame  */
+#end-game {
+  display: none;
+  flex-direction: column;
+  background: rgb(56, 29, 156);
+  justify-content: center;
+  align-items: center;
+}
 #end-game p {
   font-size: 32px;
   font-family: "VT323", monospace;
+  color: whitesmoke;
 }
 
 #end-game h1 {
   font-size: 32px;
   font-family: "VT323", monospace;
+  color: whitesmoke;
 }
 
 .logo-img {
@@ -126,25 +170,16 @@ body {
   }
 }
 
-.btn {
-  background: rgb(129, 31, 148);
-  border-bottom: 6px inset rgba(0, 0, 0, 0.5);
-  border-left: 6px inset rgba(0, 0, 0, 0.5);
-  border-right: 6px inset rgba(255, 255, 255, 0.5);
-  border-top: 6px inset rgba(255, 255, 255, 0.5);
-  box-sizing: border-box;
-  color: white;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 2.2rem;
-  margin: 1rem;
-  min-width: 200px;
-  padding: 0.5rem;
-  text-transform: uppercase;
-  width: auto;
-
-  &:focus,
-  &:hover {
-    background: #bcbcbc;
+.obstaAnimation {
+  animation: jump 1s steps(7) infinite;
+  background-image: url("../Asset/image/goast.png");
+  transform: translate(10%, -0%);
+}
+@keyframes jump {
+  0% {
+    background-position: 0, 0;
+  }
+  100% {
+    background-position: 1067px, 0;
   }
 }
